--- a/.gitignore
+++ b/.gitignore
@@ -47,13 +47,14 @@ Desktop.ini
 ######################
 # NetBeans
 ######################
-nbproject/
+**/nbproject/private/
+**/nbproject/Makefile-*.mk
+**/nbproject/Package-*.bash
 build/
 nbbuild/
 dist/
 nbdist/
-nbactions.xml
-nb-configuration.xml
+.nb-gradle/
  
 ######################
 # IDEA
